// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Должен вернуть все типы кузова из bodyTypes для AUDI 1`] = `
Array [
  Object {
    "body": "COUPE",
    "bodyRus": "Купе",
    "crossLinkText": "Audi купе",
    "key": "AUDI_COUPE",
    "params": Object {
      "body_type_group": Array [
        "COUPE",
      ],
    },
    "renderAtFooter": true,
    "value": "COUPE",
  },
  Object {
    "body": "SEDAN",
    "bodyRus": "Седан",
    "crossLinkText": "Audi седан",
    "key": "AUDI_SEDAN",
    "params": Object {
      "body_type_group": Array [
        "SEDAN",
      ],
    },
    "renderAtFooter": true,
    "value": "SEDAN",
  },
]
`;

exports[`Должен вернуть все типы кузова из bodyTypes для AUDI 100 1`] = `
Array [
  Object {
    "body": "COUPE",
    "bodyRus": "Купе",
    "crossLinkText": "Audi 100 купе",
    "key": "AUDI_COUPE",
    "params": Object {
      "body_type_group": Array [
        "COUPE",
      ],
    },
    "renderAtFooter": true,
    "value": "COUPE",
  },
  Object {
    "body": "SEDAN",
    "bodyRus": "Седан",
    "crossLinkText": "Audi 100 седан",
    "key": "AUDI_SEDAN",
    "params": Object {
      "body_type_group": Array [
        "SEDAN",
      ],
    },
    "renderAtFooter": true,
    "value": "SEDAN",
  },
]
`;

exports[`Должен вернуть все типы кузова из bodyTypes для модели с шильдом 1`] = `
Array [
  Object {
    "body": "COUPE",
    "bodyRus": "Купе",
    "crossLinkText": "Audi Grand C-Max купе",
    "key": "AUDI_COUPE",
    "params": Object {
      "body_type_group": Array [
        "COUPE",
      ],
    },
    "renderAtFooter": true,
    "value": "COUPE",
  },
  Object {
    "body": "SEDAN",
    "bodyRus": "Седан",
    "crossLinkText": "Audi Grand C-Max седан",
    "key": "AUDI_SEDAN",
    "params": Object {
      "body_type_group": Array [
        "SEDAN",
      ],
    },
    "renderAtFooter": true,
    "value": "SEDAN",
  },
]
`;

exports[`Должен вернуть пустой массив если не выбрана марка 1`] = `Array []`;
